--- a/studio-aud.html
+++ b/studio-aud.html
@@ -38,7 +38,7 @@
     <br><br>
     <div class="row">
       <div class="col-sm-6 text-center">
-        <img src="src/portfolio/studio-aud.jpg" style="width: 100%;border-radius: 1em;">
+        <img src="src/img/studio-aud.jpg" style="width: 100%;border-radius: 1em;">
       </div>
       <div class="col-sm-6">
         <h2>A Little About Me</h2>
