Rename gallery image file

--- a/studio-aud.html
+++ b/studio-aud.html
@@ -108,7 +108,7 @@
         <img src="src/portfolio/ceramics/magnets.JPG" class="gallery__img" alt="Image 10">
       </figure>
       <figure class="gallery__item ceramics-gallery__item--13">
-        <img src="src/portfolio/ceramics/palettes.JPG" class="gallery__img" alt="Image 10">
+        <img src="src/portfolio/ceramics/palettes.jpg" class="gallery__img" alt="Image 10">
       </figure>
       <figure class="gallery__item ceramics-gallery__item--15">
         <img src="src/portfolio/ceramics/seaweed.JPG" class="gallery__img" alt="Image 15">
